parser/snapshots/parser__ast_test__tests__test_binary.snap
---
source: parser/ast_test.rs
expression: 1 + 2 * 3
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "BinaryExpression",
        "op": {
          "kind": {
            "type": "PLUS"
          },
          "span": {
            "start": 2,
            "end": 3
          }
        },
        "left": {
          "type": "Integer",
          "raw": 1,
          "span": {
            "start": 0,
            "end": 1
          }
        },
        "right": {
          "type": "BinaryExpression",
          "op": {
            "kind": {
              "type": "ASTERISK"
            },
            "span": {
              "start": 6,
              "end": 7
            }
          },
          "left": {
            "type": "Integer",
            "raw": 2,
            "span": {
              "start": 4,
              "end": 5
            }
          },
          "right": {
            "type": "Integer",
            "raw": 3,
            "span": {
              "start": 8,
              "end": 9
            }
          },
          "span": {
            "start": 4,
            "end": 9
          }
        },
        "span": {
          "start": 0,
          "end": 9
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 9
    }
  }
}
