parser/snapshots/parser__ast_test__tests__test_binary_nested.snap
---
source: parser/ast_test.rs
expression: 1+2+3
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "BinaryExpression",
        "op": {
          "kind": {
            "type": "PLUS"
          },
          "span": {
            "start": 3,
            "end": 4
          }
        },
        "left": {
          "type": "BinaryExpression",
          "op": {
            "kind": {
              "type": "PLUS"
            },
            "span": {
              "start": 1,
              "end": 2
            }
          },
          "left": {
            "type": "Integer",
            "raw": 1,
            "span": {
              "start": 0,
              "end": 1
            }
          },
          "right": {
            "type": "Integer",
            "raw": 2,
            "span": {
              "start": 2,
              "end": 3
            }
          },
          "span": {
            "start": 0,
            "end": 3
          }
        },
        "right": {
          "type": "Integer",
          "raw": 3,
          "span": {
            "start": 4,
            "end": 5
          }
        },
        "span": {
          "start": 0,
          "end": 5
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 5
    }
  }
}
