parser/snapshots/parser__ast_test__tests__test_func_declaration.snap
---
source: parser/ast_test.rs
expression: "fn(x) { x };"
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "FunctionDeclaration",
        "params": [
          {
            "type": "IDENTIFIER",
            "name": "x",
            "span": {
              "start": 3,
              "end": 4
            }
          }
        ],
        "body": {
          "type": "BlockStatement",
          "body": [
            {
              "type": "IDENTIFIER",
              "name": "x",
              "span": {
                "start": 8,
                "end": 9
              }
            }
          ],
          "span": {
            "start": 6,
            "end": 11
          }
        },
        "span": {
          "start": 0,
          "end": 11
        },
        "name": ""
      }
    ],
    "span": {
      "start": 0,
      "end": 12
    }
  }
}
