parser/snapshots/parser__ast_test__tests__test_func_with_name.snap
---
source: parser/ast_test.rs
expression: "let my_func = fn(x) { x };"
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "Let",
        "identifier": {
          "kind": {
            "type": "IDENTIFIER",
            "value": {
              "name": "my_func"
            }
          },
          "span": {
            "start": 4,
            "end": 11
          }
        },
        "expr": {
          "type": "FunctionDeclaration",
          "params": [
            {
              "type": "IDENTIFIER",
              "name": "x",
              "span": {
                "start": 17,
                "end": 18
              }
            }
          ],
          "body": {
            "type": "BlockStatement",
            "body": [
              {
                "type": "IDENTIFIER",
                "name": "x",
                "span": {
                  "start": 22,
                  "end": 23
                }
              }
            ],
            "span": {
              "start": 20,
              "end": 25
            }
          },
          "span": {
            "start": 14,
            "end": 25
          },
          "name": "my_func"
        },
        "span": {
          "start": 0,
          "end": 26
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 26
    }
  }
}
