parser/snapshots/parser__ast_test__tests__test_index.snap
---
source: parser/ast_test.rs
expression: "a[1]"
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "Index",
        "object": {
          "type": "IDENTIFIER",
          "name": "a",
          "span": {
            "start": 0,
            "end": 1
          }
        },
        "index": {
          "type": "Integer",
          "raw": 1,
          "span": {
            "start": 2,
            "end": 3
          }
        },
        "span": {
          "start": 1,
          "end": 4
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 4
    }
  }
}
