parser/snapshots/parser__ast_test__tests__test_let.snap
---
source: parser/ast_test.rs
expression: let a = 3
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "Let",
        "identifier": {
          "kind": {
            "type": "IDENTIFIER",
            "value": {
              "name": "a"
            }
          },
          "span": {
            "start": 4,
            "end": 5
          }
        },
        "expr": {
          "type": "Integer",
          "raw": 3,
          "span": {
            "start": 8,
            "end": 9
          }
        },
        "span": {
          "start": 0,
          "end": 9
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 9
    }
  }
}
