parser/snapshots/parser__ast_test__tests__test_string.snap
---
source: parser/ast_test.rs
expression: "\"jw\""
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "String",
        "raw": "jw",
        "span": {
          "start": 0,
          "end": 4
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 4
    }
  }
}
